src/core/compile/grammar/antlrjs/matlabParser.js
// Generated from ./src/core/compile/grammar/antlrjs/matlab.g4 by ANTLR 4.9
// jshint ignore: start
import antlr4 from 'antlr4';
import matlabListener from './matlabListener.js';
import matlabVisitor from './matlabVisitor.js';




const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

export default class matlabParser extends antlr4.Parser {

    static grammarFileName = "matlab.g4";
    static literalNames = [ null, "'true'", "'false'", null, null, null, 
                            null, "'...'", "'./'", "'.^'", "'.*'", "'.\\'", 
                            "'.''", "'='", "':'", "'/'", "'-'", "'+'", "'^'", 
                            "'*'", "'\\'", "','", "'.'", "';'", "'('", "'['", 
                            "')'", "']'", "'{'", "'}'" ];
    static symbolicNames = [ null, null, null, "NL", "BLOCKCOMMENT", "COMMENT", 
                             "WS", "ELLIPSIS", "ELE_DIV", "ELE_POW", "ELE_MULT", 
                             "ELE_TRANS", "ELE_DOT", "ASSIGN", "COLON", 
                             "DIV", "MINUS", "PLUS", "POW", "MULT", "TRANS", 
                             "COMMA", "DOT", "SEMI_COLON", "LPAREN", "LBRACK", 
                             "RPAREN", "RBRACK", "LBRACE", "RBRACE", "ID", 
                             "IMAGINARY", "INT", "FLOAT", "STRING" ];
    static ruleNames = [ "atom_element_div", "atom_element_pow", "atom_element_mult", 
                         "atom_element_transpose", "atom_element_dot", "atom_assign", 
                         "atom_colon", "atom_div", "atom_minus", "atom_plus", 
                         "atom_pow", "atom_mult", "atom_transpose", "atom_comma", 
                         "atom_dot", "atom_semi_colon", "atom_lparen", "atom_rparen", 
                         "atom_lbrack", "atom_rbrack", "atom_lbrace", "atom_rbrace", 
                         "atom_boolean", "atom_empty_array", "atom_empty_cell", 
                         "atom_float", "atom_imaginary", "atom_index_all", 
                         "atom_integer", "atom_string", "atom_var", "entry", 
                         "st_assign", "xpr_tree", "xpr_array", "xpr_cell", 
                         "xpr_array_index", "xpr_cell_index", "xpr_field", 
                         "xpr_function" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = matlabParser.ruleNames;
        this.literalNames = matlabParser.literalNames;
        this.symbolicNames = matlabParser.symbolicNames;
    }

    get atn() {
        return atn;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 33:
    	    		return this.xpr_tree_sempred(localctx, predIndex);
    	case 38:
    	    		return this.xpr_field_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    xpr_tree_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 8);
    		case 1:
    			return this.precpred(this._ctx, 7);
    		case 2:
    			return this.precpred(this._ctx, 4);
    		case 3:
    			return this.precpred(this._ctx, 3);
    		case 4:
    			return this.precpred(this._ctx, 2);
    		case 5:
    			return this.precpred(this._ctx, 1);
    		case 6:
    			return this.precpred(this._ctx, 5);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    xpr_field_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 7:
    			return this.precpred(this._ctx, 4);
    		case 8:
    			return this.precpred(this._ctx, 3);
    		case 9:
    			return this.precpred(this._ctx, 2);
    		case 10:
    			return this.precpred(this._ctx, 1);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	atom_element_div() {
	    let localctx = new Atom_element_divContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, matlabParser.RULE_atom_element_div);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 80;
	        this.match(matlabParser.ELE_DIV);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	atom_element_pow() {
	    let localctx = new Atom_element_powContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, matlabParser.RULE_atom_element_pow);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 82;
	        this.match(matlabParser.ELE_POW);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	atom_element_mult() {
	    let localctx = new Atom_element_multContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, matlabParser.RULE_atom_element_mult);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 84;
	        this.match(matlabParser.ELE_MULT);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	atom_element_transpose() {
	    let localctx = new Atom_element_transposeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, matlabParser.RULE_atom_element_transpose);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 86;
	        this.match(matlabParser.ELE_TRANS);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	atom_element_dot() {
	    let localctx = new Atom_element_dotContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, matlabParser.RULE_atom_element_dot);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 88;
	        this.match(matlabParser.ELE_DOT);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	atom_assign() {
	    let localctx = new Atom_assignContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, matlabParser.RULE_atom_assign);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 90;
	        this.match(matlabParser.ASSIGN);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	atom_colon() {
	    let localctx = new Atom_colonContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, matlabParser.RULE_atom_colon);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 92;
	        this.match(matlabParser.COLON);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	atom_div() {
	    let localctx = new Atom_divContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, matlabParser.RULE_atom_div);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 94;
	        this.match(matlabParser.DIV);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	atom_minus() {
	    let localctx = new Atom_minusContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, matlabParser.RULE_atom_minus);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 96;
	        this.match(matlabParser.MINUS);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	atom_plus() {
	    let localctx = new Atom_plusContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, matlabParser.RULE_atom_plus);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 98;
	        this.match(matlabParser.PLUS);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	atom_pow() {
	    let localctx = new Atom_powContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, matlabParser.RULE_atom_pow);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 100;
	        this.match(matlabParser.POW);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	atom_mult() {
	    let localctx = new Atom_multContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, matlabParser.RULE_atom_mult);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 102;
	        this.match(matlabParser.MULT);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	atom_transpose() {
	    let localctx = new Atom_transposeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, matlabParser.RULE_atom_transpose);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 104;
	        this.match(matlabParser.TRANS);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	atom_comma() {
	    let localctx = new Atom_commaContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, matlabParser.RULE_atom_comma);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 106;
	        this.match(matlabParser.COMMA);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	atom_dot() {
	    let localctx = new Atom_dotContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, matlabParser.RULE_atom_dot);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 108;
	        this.match(matlabParser.DOT);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	atom_semi_colon() {
	    let localctx = new Atom_semi_colonContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, matlabParser.RULE_atom_semi_colon);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 110;
	        this.match(matlabParser.SEMI_COLON);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	atom_lparen() {
	    let localctx = new Atom_lparenContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, matlabParser.RULE_atom_lparen);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 112;
	        this.match(matlabParser.LPAREN);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	atom_rparen() {
	    let localctx = new Atom_rparenContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, matlabParser.RULE_atom_rparen);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 114;
	        this.match(matlabParser.RPAREN);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	atom_lbrack() {
	    let localctx = new Atom_lbrackContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 36, matlabParser.RULE_atom_lbrack);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 116;
	        this.match(matlabParser.LBRACK);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	atom_rbrack() {
	    let localctx = new Atom_rbrackContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 38, matlabParser.RULE_atom_rbrack);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 118;
	        this.match(matlabParser.RBRACK);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	atom_lbrace() {
	    let localctx = new Atom_lbraceContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 40, matlabParser.RULE_atom_lbrace);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 120;
	        this.match(matlabParser.LBRACE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	atom_rbrace() {
	    let localctx = new Atom_rbraceContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 42, matlabParser.RULE_atom_rbrace);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 122;
	        this.match(matlabParser.RBRACE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	atom_boolean() {
	    let localctx = new Atom_booleanContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 44, matlabParser.RULE_atom_boolean);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 124;
	        _la = this._input.LA(1);
	        if(!(_la===matlabParser.T__0 || _la===matlabParser.T__1)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	atom_empty_array() {
	    let localctx = new Atom_empty_arrayContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 46, matlabParser.RULE_atom_empty_array);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 126;
	        this.match(matlabParser.LBRACK);
	        this.state = 127;
	        this.match(matlabParser.RBRACK);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	atom_empty_cell() {
	    let localctx = new Atom_empty_cellContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 48, matlabParser.RULE_atom_empty_cell);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 129;
	        this.match(matlabParser.LBRACE);
	        this.state = 130;
	        this.match(matlabParser.RBRACE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	atom_float() {
	    let localctx = new Atom_floatContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 50, matlabParser.RULE_atom_float);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 132;
	        this.match(matlabParser.FLOAT);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	atom_imaginary() {
	    let localctx = new Atom_imaginaryContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 52, matlabParser.RULE_atom_imaginary);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 134;
	        this.match(matlabParser.IMAGINARY);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	atom_index_all() {
	    let localctx = new Atom_index_allContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 54, matlabParser.RULE_atom_index_all);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 136;
	        this.match(matlabParser.COLON);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	atom_integer() {
	    let localctx = new Atom_integerContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 56, matlabParser.RULE_atom_integer);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 138;
	        this.match(matlabParser.INT);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	atom_string() {
	    let localctx = new Atom_stringContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 58, matlabParser.RULE_atom_string);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 140;
	        this.match(matlabParser.STRING);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	atom_var() {
	    let localctx = new Atom_varContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 60, matlabParser.RULE_atom_var);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 142;
	        this.match(matlabParser.ID);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	entry() {
	    let localctx = new EntryContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 62, matlabParser.RULE_entry);
	    try {
	        this.state = 146;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,0,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 144;
	            this.st_assign();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 145;
	            this.xpr_tree(0);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	st_assign() {
	    let localctx = new St_assignContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 64, matlabParser.RULE_st_assign);
	    var _la = 0; // Token type
	    try {
	        this.state = 186;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case matlabParser.ID:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 152;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
	            switch(la_) {
	            case 1:
	                this.state = 148;
	                this.atom_var();
	                break;

	            case 2:
	                this.state = 149;
	                this.xpr_array_index();
	                break;

	            case 3:
	                this.state = 150;
	                this.xpr_cell_index();
	                break;

	            case 4:
	                this.state = 151;
	                this.xpr_field(0);
	                break;

	            }
	            this.state = 154;
	            this.atom_assign();
	            this.state = 157;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
	            switch(la_) {
	            case 1:
	                this.state = 155;
	                this.atom_empty_cell();
	                break;

	            case 2:
	                this.state = 156;
	                this.xpr_tree(0);
	                break;

	            }
	            break;
	        case matlabParser.LBRACK:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 159;
	            this.atom_lbrack();
	            this.state = 165;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
	            switch(la_) {
	            case 1:
	                break;

	            case 2:
	                this.state = 161;
	                this.atom_var();
	                break;

	            case 3:
	                this.state = 162;
	                this.xpr_array_index();
	                break;

	            case 4:
	                this.state = 163;
	                this.xpr_cell_index();
	                break;

	            case 5:
	                this.state = 164;
	                this.xpr_field(0);
	                break;

	            }
	            this.state = 177;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===matlabParser.COMMA) {
	                this.state = 167;
	                this.match(matlabParser.COMMA);
	                this.state = 173;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input,4,this._ctx);
	                switch(la_) {
	                case 1:
	                    break;

	                case 2:
	                    this.state = 169;
	                    this.atom_var();
	                    break;

	                case 3:
	                    this.state = 170;
	                    this.xpr_array_index();
	                    break;

	                case 4:
	                    this.state = 171;
	                    this.xpr_cell_index();
	                    break;

	                case 5:
	                    this.state = 172;
	                    this.xpr_field(0);
	                    break;
